applications/teamspeak/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: docker.io/library/teamspeak:3.13
          ports:
            - name: voice
              containerPort: 9987
              protocol: UDP
            - name: serverquery
              containerPort: 10011
            - name: filetransfer
              containerPort: 30033
          volumeMounts:
            - name: data
              mountPath: /var/ts3server
          livenessProbe:
            tcpSocket:
              port: serverquery
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      restartPolicy: Always
