applications/teamspeak/resources/teamspeak.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: teamspeak

spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamspeak
  template:
    metadata:
      labels:
        app: teamspeak
    spec:
      containers:
        - name: teamspeak
          image: docker.io/library/teamspeak:3.13
          ports:
            - name: voice
              containerPort: 9987
              protocol: UDP
            - name: serverquery
              containerPort: 10011
            - name: filetransfer
              containerPort: 30033
          volumeMounts:
            - name: teamspeak-data
              mountPath: /var/ts3server
          livenessProbe:
            tcpSocket:
              port: serverquery
      volumes:
        - name: teamspeak-data
          persistentVolumeClaim:
            claimName: teamspeak-data
      restartPolicy: Always
