applications/teamspeak/resources/service-load-balancer.yaml
apiVersion: v1
kind: Service

metadata:
  name: teamspeak-lb
  labels:
    chlorinate.rokoucha.com/lb: public
    external-dns.rokoucha.com/scope: teamspeak
  annotations:
    lbipam.cilium.io/sharing-key: public-dmz
    lbipam.cilium.io/sharing-cross-namespace: "*"
    external-dns.alpha.kubernetes.io/controller: teamspeak
    teamspeak.external-dns.alpha.kubernetes.io/hostname: ts.ggrel.net

spec:
  selector:
    app: teamspeak
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  externalTrafficPolicy: Cluster
  ports:
    - name: voice
      port: 9987
      targetPort: 9987
      protocol: UDP
    - name: serverquery
      port: 10011
      targetPort: 10011
      protocol: TCP
    - name: filetransfer
      port: 30033
      targetPort: 30033
      protocol: TCP
