applications/teamspeak/resources/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: teamspeak
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ts.ggrel.net

spec:
  selector:
    app: teamspeak
  type: NodePort
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: voice
      port: 9987
      targetPort: 9987
      nodePort: 9987
      protocol: UDP
    - name: serverquery
      port: 10011
      targetPort: 10011
      nodePort: 10011
    - name: filetransfer
      port: 30033
      targetPort: 30033
      nodePort: 30033
